--- a/inventory/standard/group_vars/xaiver.yaml
+++ b/inventory/standard/group_vars/xaiver.yaml
@@ -1,34 +1,7 @@
 ---
-gitconfig:
-  name: 'John Ratliff'
-  email: 'john@technoplaza.net'
+ansible_connection: local
 
-ssh_host_configs:
-  noaa-bldc:
-    Hostname: 'bastion.bldc.nwave.noaa.gov'
-  noaa-ctc:
-    Hostname: 'bastion.ctc.nwave.noaa.gov'
-  noaa-boul:
-    Hostname: 'bastion.boul.nwave.noaa.gov'
-  'noaa-bldc noaa-ctc noaa-boul':
-    DynamicForward: '192.168.1.5:7070'
-    LocalForward:
-      - '192.168.1.5:5950 localhost:5950'
-      - '192.168.1.5:5951 localhost:5951'
-      - '192.168.1.5:5952 localhost:5952'
-      - '192.168.1.5:5953 localhost:5953'
-      - '192.168.1.5:5954 localhost:5954'
-      - '192.168.1.5:5955 localhost:5955'
-      - '192.168.1.5:5956 localhost:5956'
-      - '192.168.1.5:5957 localhost:5957'
-      - '192.168.1.5:5958 localhost:5958'
-      - '192.168.1.5:5959 localhost:5959'
-    PKCS11Provider: '/usr/lib/opensc-pkcs11.so'
-    PubkeyAcceptedKeyTypes: '+ssh-rsa'
-  raspberrypi:
-    Hostname: '68.45.17.181'
-    Port: '2222'
-    User: 'pi'
-
-use_vnc: false
-use_vscode_git: true
+ssh_host_common_configs:
+  ControlMaster: 'auto'
+  ControlPath: '~/.ssh/%r@%h:%p'
+  ForwardAgent: 'yes'
