--- a/inventory/standard/host_vars/jdratlif-dev7.ctc.grnoc.iu.edu.yaml
+++ b/inventory/standard/host_vars/jdratlif-dev7.ctc.grnoc.iu.edu.yaml
@@ -16,23 +16,8 @@ functions:
 
 keychain_bin: '/usr/local/bin/keychain'
 
-ssh_host_common_configs:
-  ForwardAgent: 'yes'
-
-ssh_host_configs:
-  leap:
-    Hostname: leap.grnoc.iu.edu
-  jump:
-    Hostname: jump.grnoc.iu.edu
-  skip:
-    Hostname: skip.grnoc.iu.edu
-  xaiver:
-    Hostname: xaiver.technoplaza.net
-    Port: '2202'
-    RemoteForward: '192.168.1.5:5907 localhost:5901'
-
 use_i3: true
-use_keychain: true
+use_keychain: false
 use_vnc: true
 use_vscode_git: true
 
