add vpn_iu to yoga

--- a/inventory/standard/host_vars/yoga-mint.yaml
+++ b/inventory/standard/host_vars/yoga-mint.yaml
@@ -1,4 +1,10 @@
 ---
+aliases:
+  vpn_iu: >-
+    sudo openconnect --juniper
+    -s "vpn-slice 10.0.0.0/8 {{ vpn_hosts['iu'] | join(' ') }}"
+    -u jdratlif https://vpn.iu.edu/groups
+
 gitconfig:
   name: 'John Ratliff'
   email: 'john@technoplaza.net'
@@ -43,3 +49,36 @@ ssh_host_configs:
       - '5922 localhost:24422'
 
 use_vscode_git: true
+
+vpn_hosts:
+  iu:
+    - account.net.internet2.edu
+    - account.noc.onenet.net
+    - awx.grnoc.iu.edu
+    - awx-test.bldc.grnoc.iu.edu
+    - awx.bldc.nwave.noaa.gov
+    - awx.ctc.nwave.noaa.gov
+    - build.grnoc.iu.edu
+    - cni-mapper.grnoc.iu.edu
+    - cni-mapper-bl.grnoc.iu.edu
+    - cosign.areon.net
+    - cloud.grnoc.iu.edu
+    - cloud.bldc.grnoc.iu.edu
+    - cloud.ctc.grnoc.iu.edu
+    - footprints.ncren.net
+    - oob2.ak23.bldc.grnoc.iu.edu
+    - oob2.n13.ctc.grnoc.iu.edu
+    - os.bldc.net.internet2.edu
+    - os.wash2.net.internet2.edu
+    - nessus.boul.nwave.noaa.gov
+    - snapp.ncren.net
+    - snapp-frontend-01.globalnoc.mcnc.org
+    - snapp-frontend-02.globalnoc.mcnc.org
+    - snapp-frontend-test-01.globalnoc.mcnc.org
+    - snapp-services-01.globalnoc.mcnc.org
+    - snapp-services-02.globalnoc.mcnc.org
+    - snapp-services-test-01.globalnoc.mcnc.org
+    - weblogin.grnoc.iu.edu
+    - weblogin.net.cen.ct.gov
+    - weblogin.oshean.org
+    - weblogin.nwave.noaa.gov
