--- a/inventory/standard/host_vars/jdratlif-dev7.ctc.grnoc.iu.edu.yaml
+++ b/inventory/standard/host_vars/jdratlif-dev7.ctc.grnoc.iu.edu.yaml
@@ -16,6 +16,12 @@ functions:
 
 keychain_bin: '/usr/local/bin/keychain'
 
+ssh_host_configs:
+  xaiver:
+    Hostname: xaiver.technoplaza.net
+    Port: 2202
+    RemoteForward: 192.168.1.5:9922 localhost:22
+
 use_i3: true
 use_keychain: false
 use_vnc: true
