--- a/inventory/standard/group_vars/bastion.yaml
+++ b/inventory/standard/group_vars/bastion.yaml
@@ -122,8 +122,8 @@ ssh_host_configs:
     Hostname: grafana.intl.grnoc.iu.edu
   'iu-grafana':
     Hostname: grafana.net.uits.iu.edu
-  'linkoregon-grafana grafana.net.linkoregon.org':
-    Hostname: 140.182.44.246
+  'linkoregon-grafana':
+    Hostname: grafana.net.linkoregon.org
   'pennren-grafana':
     Hostname: grafana.net.pennren.net
   'rt-grafana':
