add new snapp-test server

--- a/inventory/standard/group_vars/nwave_bastion.yaml
+++ b/inventory/standard/group_vars/nwave_bastion.yaml
@@ -28,6 +28,8 @@ ssh_host_configs:
     Hostname: compute2.cloud.ctc
   'cloud-ctc-3 compute-ctc-3':
     Hostname: compute3.cloud.ctc
+  'snapp-test.nwave.noaa.gov snapp-test.ctc.nwave.noaa.gov':
+    Hostname: '140.182.46.155'
   'dns dns-bldc':
     Hostname: db2.bldc
   'dns-ctc':
