--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -248,6 +248,7 @@ all:
                     snapp-services.ctc.nwave.noaa.gov:
                     snapp-shard.bldc.nwave.noaa.gov:
                     snapp-shard.ctc.nwave.noaa.gov:
+                    snapp-test.ctc.nwave.noaa.gov:
                 nwave_other:
                   children:
                     nwave_awx:
