--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -290,6 +290,7 @@ all:
                     tools.bldc.nwave.noaa.gov:
                     tools.ctc.nwave.noaa.gov:
                     tools.boul.nwave.noaa.gov:
+                    tools.silv2.nwave.noaa.gov:
                     tools2.bldc.nwave.noaa.gov:
                     tools2.ctc.nwave.noaa.gov:
                     tools2.silv.nwave.noaa.gov:
