--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -28,7 +28,7 @@ all:
                     grafana.ilight.net:
                     grafana.indiana.gigapop.net:
                     grafana.intl.grnoc.iu.edu:
-                    grafana.net.linkoregon.org:
+                    grafana.linkoregon.org:
                     grafana.net.cen.ct.gov:
                     grafana.net.pennren.net:
                     grafana.net.rt.iu.edu:
