switch to pulse secure

--- a/inventory/standard/host_vars/yoga2.yaml
+++ b/inventory/standard/host_vars/yoga2.yaml
@@ -1,7 +1,7 @@
 ---
 aliases:
   vpn_iu: >-
-    sudo openconnect --juniper
+    sudo openconnect --protocol=pulse
     -s "/home/jdratlif/venvs/vpn-slice/bin/vpn-slice 10.0.0.0/8 {{ vpn_hosts['iu'] | join(' ') }}"
     -u jdratlif https://vpn.iu.edu/groups
 
