--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -303,5 +303,5 @@ all:
                     tools2.silv.nwave.noaa.gov:
     xaiver:
       hosts:
-        htpc-mint:
+        htpc:
         yoga2:
