add fix_agent script to awx

--- a/inventory/standard/group_vars/awx.yaml
+++ b/inventory/standard/group_vars/awx.yaml
@@ -2,4 +2,10 @@
 aliases:
   awx: 'sudo docker exec -it awx_task /bin/bash'
 
+functions:
+  fix_agent:
+    - MY_DIR=$(ls -ldt /tmp/ssh-* | grep jdratlif | head -1 | awk '{print $NF}')
+    - MY_AGENT=$(ls ${MY_DIR}/agent*)
+    - export SSH_AUTH_SOCK=$MY_AGENT
+
 use_vscode_git: true
