rename dev host

--- a/inventory/standard/host_vars/jdratlif-dev7.grnoc.iu.edu.yaml
+++ b/inventory/standard/host_vars/jdratlif-dev7.grnoc.iu.edu.yaml
@@ -2,10 +2,10 @@
 aliases:
   rpm6: 'rpm --define="_gpg_name syseng@grnoc.iu.edu"'
   rpm7: 'rpm --define="_gpg_name globalnoc@iu.edu"'
-  vpn: >-
-    sudo openconnect --juniper
-    -s "vpn-slice 10.0.0.0/8 {{ vpn_hosts | join(' ') }}"
-    -u jdratlif https://vpn.iu.edu/groups
+  # vpn: >-
+  #   sudo openconnect --juniper
+  #   -s "vpn-slice 10.0.0.0/8 {{ vpn_hosts | join(' ') }}"
+  #   -u jdratlif https://vpn.iu.edu/groups
 
 functions:
   yaml_class:
@@ -22,9 +22,9 @@ ssh_host_configs:
     Port: '2202'
     RemoteForward: '192.168.1.5:9922 localhost:22'
 
-use_i3: true
+use_i3: false
 use_keychain: false
-use_vnc: true
+use_vnc: false
 use_vscode_git: true
 
 vpn_hosts:
