add node to dev host

--- a/inventory/standard/host_vars/jdratlif-dev7.grnoc.iu.edu.yaml
+++ b/inventory/standard/host_vars/jdratlif-dev7.grnoc.iu.edu.yaml
@@ -16,6 +16,9 @@ functions:
 
 keychain_bin: '/usr/local/bin/keychain'
 
+path_local_pre:
+  - /opt/node/bin
+
 ssh_host_configs:
   xaiver:
     Hostname: 'xaiver.technoplaza.net'
