--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -39,7 +39,6 @@ all:
                     haproxy.ctc.grnoc.iu.edu:
                     io3.bldc.grnoc.iu.edu:
                     irnc-grm.grnoc.iu.edu:
-                    jdratlif-dev7.bldc.grnoc.iu.edu:
                     jdratlif-dev7.grnoc.iu.edu:
                     jeuno.ctc.grnoc.iu.edu:
                     mongo-arbiter.areon.net:
@@ -65,6 +64,7 @@ all:
                     netsage-portal-tacc.grnoc.iu.edu:
                     netsage-simp.grnoc.iu.edu:
                     rabbitmq.tsds.bldc.grnoc.iu.edu:
+                    qa-test.grnoc.iu.edu:
                     services.tsds.bldc.grnoc.iu.edu:
                     services.tsds.ctc.grnoc.iu.edu:
                     simp.grnoc.iu.edu:
