--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -40,6 +40,7 @@ all:
                     io3.bldc.grnoc.iu.edu:
                     irnc-grm.grnoc.iu.edu:
                     jdratlif-dev7.grnoc.iu.edu:
+                    jdratlif-dev7.bldc.grnoc.iu.edu:
                     jeuno.ctc.grnoc.iu.edu:
                     mongo-arbiter.areon.net:
                     mongo1.tsds.grnoc.iu.edu:
