fix functions and ssh aliases

--- a/inventory/standard/host_vars/skip.grnoc.iu.edu.yaml
+++ b/inventory/standard/host_vars/skip.grnoc.iu.edu.yaml
@@ -1,6 +1,6 @@
 ---
 aliases:
-  myansible: 'source ~/myansible/bin/activate'
+  myansible: "source ~/venvs/ansible/bin/activate"
 
 path_local_pre:
-  - '~/openssh/bin'
+  - "~/openssh/bin:~/python3/bin"
