--- a/inventory/standard/group_vars/all.yaml
+++ b/inventory/standard/group_vars/all.yaml
@@ -1,10 +1,16 @@
 ---
 aliases:
   fix_perms: 'find . -type f -exec chmod 644 {} \; ; find . -type d -exec chmod 755 {} \;'
-  git_oneline: 'git log --oneline'
-  ls: 'ls --color=auto'
-  ll: 'ls -l --color=auto'
-  ipt: 'sudo iptables --line-numbers -n -v -L'
+  git_oneline: "git log --oneline"
+  ls: "ls --color=auto"
+  ll: "ls -l --color=auto"
+  ipt: "sudo iptables --line-numbers -n -v -L"
+
+functions:
+  fix_agent:
+    - MY_DIR=$(ls -ldt /tmp/ssh-* | grep jdratlif | head -1 | awk '{print $NF}')
+    - MY_AGENT=$(ls ${MY_DIR}/agent*)
+    - export SSH_AUTH_SOCK=$MY_AGENT
 
 ssh_authorized_keys: []
 
