--- a/inventory/standard/group_vars/awx.yaml
+++ b/inventory/standard/group_vars/awx.yaml
@@ -1,11 +1,5 @@
 ---
 aliases:
-  awx: 'sudo docker exec -it awx_task /bin/bash'
-
-functions:
-  fix_agent:
-    - MY_DIR=$(ls -ldt /tmp/ssh-* | grep jdratlif | head -1 | awk '{print $NF}')
-    - MY_AGENT=$(ls ${MY_DIR}/agent*)
-    - export SSH_AUTH_SOCK=$MY_AGENT
+  awx: "sudo docker exec -it awx_task /bin/bash"
 
 use_vscode_git: true
