--- a/inventory/standard/group_vars/bastion.yaml
+++ b/inventory/standard/group_vars/bastion.yaml
@@ -6,14 +6,10 @@ functions:
     - name=$1
     - shift
     - ansible-playbook main.yaml -e "host_override=$name" "$@"
-  fix_agent:
-    - MY_DIR=$(ls -ldt /tmp/ssh-* | grep jdratlif | head -1 | awk '{print $NF}')
-    - MY_AGENT=$(ls ${MY_DIR}/agent*)
-    - export SSH_AUTH_SOCK=$MY_AGENT
 
 ssh_host_common_configs:
-  ControlMaster: 'auto'
-  ControlPath: '~/.ssh/%r@%h:%p'
+  ControlMaster: "auto"
+  ControlPath: "~/.ssh/%r@%h:%p"
 
 ssh_host_configs:
   # AREON hosts
@@ -30,11 +26,11 @@ ssh_host_configs:
   # CEN hosts
 
   # carto host
-  'cen-carto':
+  "cen-carto":
     Hostname: carto.net.cen.ct.gov
 
   # nagios servers
-  'cen-mon-bldc cen-mon':
+  "cen-mon-bldc cen-mon":
     Hostname: mon.bldc.net.cen.ct.gov
   cen-mon-ehct:
     Hostname: mon.ehct.net.cen.ct.gov
@@ -86,52 +82,54 @@ ssh_host_configs:
     Hostname: compute7.cloud.ctc.grnoc.iu.edu
 
   # dev servers
-  dev:
-    Hostname: jdratlif-dev7.ctc.grnoc.iu.edu
+  dev dev.ctc:
+    Hostname: jdratlif-dev7.grnoc.iu.edu
     LocalForward:
-      - '24478 localhost:5901'
-      - '24422 localhost:22'
-  dev2:
+      - "24478 localhost:5901"
+      - "24422 localhost:22"
+  dev.bldc:
     Hostname: jdratlif-dev7.bldc.grnoc.iu.edu
+  dev8:
+    Hostname: jdratlif-dev8.grnoc.iu.edu
 
   # DNS servers
   dns:
     Hostname: db2.grnoc.iu.edu
 
   # Frontend servers
-  'frontend-bldc frontend':
+  "frontend-bldc frontend":
     Hostname: frontend.tsds.bldc.grnoc.iu.edu
   frontend-ctc:
     Hostname: frontend.tsds.ctc.grnoc.iu.edu
 
   # grafana servers
-  'btaa-grafana':
+  "btaa-grafana":
     Hostname: grafana.omnipop.btaa.org
-  'caaren-grafana':
+  "caaren-grafana":
     Hostname: grafana.caaren.grnoc.iu.edu
-  'campuses-grafana':
+  "campuses-grafana":
     Hostname: grafana.campuses.grnoc.iu.edu
-  'gigapop-grafana':
+  "gigapop-grafana":
     Hostname: grafana.indiana.gigapop.net
-  'gpn-grafana':
+  "gpn-grafana":
     Hostname: grafana.gpn.grnoc.iu.edu
-  'ilight-grafana':
+  "ilight-grafana":
     Hostname: grafana.ilight.net
-  'intl-grafana':
+  "intl-grafana":
     Hostname: grafana.intl.grnoc.iu.edu
-  'iu-grafana':
+  "iu-grafana":
     Hostname: grafana.net.uits.iu.edu
-  'linkoregon-grafana':
+  "linkoregon-grafana":
     Hostname: grafana.linkoregon.org
-  'pennren-grafana':
+  "pennren-grafana":
     Hostname: grafana.net.pennren.net
-  'rt-grafana':
+  "rt-grafana":
     Hostname: grafana.net.rt.iu.edu
-  'sox-grafana':
+  "sox-grafana":
     Hostname: grafana.sox.net
 
   # NAGIOS servers
-  'mon-bldc mon nocmon':
+  "mon-bldc mon nocmon":
     Hostname: nocmon.bldc.grnoc.iu.edu
   mon-ctc:
     Hostname: nocmon.ctc.grnoc.iu.edu
@@ -181,17 +179,17 @@ ssh_host_configs:
     Hostname: build.grnoc.iu.edu
 
   # rabbit hosts
-  'rabbit-bldc rabbit':
+  "rabbit-bldc rabbit":
     Hostname: rabbitmq.tsds.bldc.grnoc.iu.edu
 
   # TSDS services hosts
-  'services-bldc services':
+  "services-bldc services":
     Hostname: services.tsds.bldc.grnoc.iu.edu
   services-ctc:
     Hostname: services.tsds.ctc.grnoc.iu.edu
 
   # SIMP hosts
-  'simp-comp simp-tsds':
+  "simp-comp simp-tsds":
     Hostname: simp-comp.bldc.grnoc.iu.edu
   simp-data:
     Hostname: simp-data2.bldc.grnoc.iu.edu
@@ -223,39 +221,39 @@ ssh_host_configs:
   # Internet2 hosts
 
   # Bastion hosts
-  'i2-bastion-bldc i2-bastion':
+  "i2-bastion-bldc i2-bastion":
     Hostname: bastion.bldc.net.internet2.edu
   i2-bastion-wash2:
     Hostname: bastion.wash2.net.internet2.edu
 
   # BGP hosts
-  'i2-bgp':
+  "i2-bgp":
     Hostname: openbgp.wash2.net.internet2.edu
-  'i2-bgp-old':
+  "i2-bgp-old":
     Hostname: bgp.ctc.net.internet2.edu
-  'i2-bgp-report':
+  "i2-bgp-report":
     Hostname: bgp.ctc.grnoc.iu.edu
 
   # BURP servers
-  'i2-burp-bldc i2-burp-wash2 i2-burp':
+  "i2-burp-bldc i2-burp-wash2 i2-burp":
     Hostname: backup.ctc.net.internet2.edu
 
   # frontend servers
-  'i2-frontend-bldc i2-frontend':
+  "i2-frontend-bldc i2-frontend":
     Hostname: frontend.tsds.bldc.net.internet2.edu
   i2-frontend-wash2:
     Hostname: frontend.tsds.wash2.net.internet2.edu
 
   # grafana servers
-  'i2-grafana-bldc i2-grafana':
+  "i2-grafana-bldc i2-grafana":
     Hostname: grafana.bldc.net.internet2.edu
   i2-grafana-wash2:
     Hostname: grafana.wash2.net.internet2.edu
 
   # NAGIOS servers
-  'i2-mon-bldc i2-mon i2-nocmon':
+  "i2-mon-bldc i2-mon i2-nocmon":
     Hostname: mon.bldc.net.internet2.edu
-  'i2-mon-wash2 i2-nocmon-wash2':
+  "i2-mon-wash2 i2-nocmon-wash2":
     Hostname: mon.wash2.net.internet2.edu
 
   # mongo servers
@@ -274,25 +272,25 @@ ssh_host_configs:
     Hostname: mongo3.tsds.wash2.net.internet2.edu
 
   # rabbit servers
-  'i2-rabbit-bldc i2-rabbit':
+  "i2-rabbit-bldc i2-rabbit":
     Hostname: rabbitmq.tsds.bldc.net.internet2.edu
   i2-rabbit-wash2:
     Hostname: rabbitmq.tsds.wash2.net.internet2.edu
 
   # TSDS services servers
-  'i2-services-bldc i2-services':
+  "i2-services-bldc i2-services":
     Hostname: services.tsds.bldc.net.internet2.edu
   i2-services-wash2:
     Hostname: services.tsds.wash2.net.internet2.edu
 
   # SNAPP servers
-  'i2-snapp-bldc i2-simp-bldc i2-snapp i2-simp':
+  "i2-snapp-bldc i2-simp-bldc i2-snapp i2-simp":
     Hostname: snapp-collector.bldc.net.internet2.edu
-  'i2-snapp-wash2 i2-simp-wash2':
+  "i2-snapp-wash2 i2-simp-wash2":
     Hostname: snapp-collector.wash2.net.internet2.edu
 
   # Visual Network servers
-  'i2-vn-bldc i2-vn':
+  "i2-vn-bldc i2-vn":
     Hostname: vn.bldc.net.internet2.edu
   i2-vn-wash2:
     Hostname: vn.wash2.net.internet2.edu
@@ -306,13 +304,13 @@ ssh_host_configs:
   # MCNC hosts
 
   # AlertMon servers
-  'mcnc-alertmon-1 mcnc-alertmon':
+  "mcnc-alertmon-1 mcnc-alertmon":
     Hostname: mon-01.globalnoc.mcnc.org
   mcnc-alertmon-2:
     Hostname: mon-02.globalnoc.mcnc.org
 
   # frontend servers
-  'mcnc-frontend-1 mcnc-frontend':
+  "mcnc-frontend-1 mcnc-frontend":
     Hostname: snapp-frontend-01.globalnoc.mcnc.org
   mcnc-frontend-2:
     Hostname: snapp-frontend-02.globalnoc.mcnc.org
@@ -320,11 +318,11 @@ ssh_host_configs:
     Hostname: snapp-frontend-test-01.globalnoc.mcnc.org
 
   # kerberos servers
-  'mcnc-kerb mcnc-kerb-1':
+  "mcnc-kerb mcnc-kerb-1":
     Hostname: tools-01.globalnoc.mcnc.org
 
   # KVM servers
-  'mcnc-kvm-1 mcnc-kvm':
+  "mcnc-kvm-1 mcnc-kvm":
     Hostname: snapp-01.globalnoc.mcnc.org
   mcnc-kvm-2:
     Hostname: snapp-02.globalnoc.mcnc.org
@@ -332,31 +330,31 @@ ssh_host_configs:
     Hostname: snapp-test-01.globalnoc.mcnc.org
 
   # mongo servers
-  'mcnc-mongo-1 mcnc-mongo mcnc-shard-1 mcnc-shard':
+  "mcnc-mongo-1 mcnc-mongo mcnc-shard-1 mcnc-shard":
     Hostname: snapp-shard-01.globalnoc.mcnc.org
-  'mcnc-mongo-2 mcnc-shard-2':
+  "mcnc-mongo-2 mcnc-shard-2":
     Hostname: snapp-shard-02.globalnoc.mcnc.org
-  'mcnc-mongo-test mcnc-shard-test':
+  "mcnc-mongo-test mcnc-shard-test":
     Hostname: snapp-shard-test-01.globalnoc.mcnc.org
 
   # nagios
-  'mcnc-mon-test mcnc-nagios-test':
+  "mcnc-mon-test mcnc-nagios-test":
     Hostname: mon-test-01.globalnoc.mcnc.org
-  'mcnc-mon-1 mcnc-nagios-1 mcnc-mon mcnc-nagios':
+  "mcnc-mon-1 mcnc-nagios-1 mcnc-mon mcnc-nagios":
     Hostname: mon-01.globalnoc.mcnc.org
-  'mcnc-mon-2 mcnc-nagios-2':
+  "mcnc-mon-2 mcnc-nagios-2":
     Hostname: mon-02.globalnoc.mcnc.org
 
   # portal servers
-  'mcnc-grafana-1 mcnc-grafana mcnc-portal-1 mcnc-portal':
+  "mcnc-grafana-1 mcnc-grafana mcnc-portal-1 mcnc-portal":
     Hostname: snapp-portal-01.globalnoc.mcnc.org
-  'mcnc-grafana-2 mcnc-portal-2':
+  "mcnc-grafana-2 mcnc-portal-2":
     Hostname: snapp-portal-02.globalnoc.mcnc.org
-  'mcnc-grafana-test mcnc-portal-test':
+  "mcnc-grafana-test mcnc-portal-test":
     Hostname: snapp-portal-test-01.globalnoc.mcnc.org
 
   # rabbit servers
-  'mcnc-rabbit-1 mcnc-rabbit':
+  "mcnc-rabbit-1 mcnc-rabbit":
     Hostname: snapp-rabbit-01.globalnoc.mcnc.org
   mcnc-rabbit-2:
     Hostname: snapp-rabbit-02.globalnoc.mcnc.org
@@ -364,7 +362,7 @@ ssh_host_configs:
     Hostname: snapp-rabbit-test-01.globalnoc.mcnc.org
 
   # TSDS services servers
-  'mcnc-services-1 mcnc-services':
+  "mcnc-services-1 mcnc-services":
     Hostname: snapp-services-01.globalnoc.mcnc.org
   mcnc-services-2:
     Hostname: snapp-services-02.globalnoc.mcnc.org
@@ -372,13 +370,13 @@ ssh_host_configs:
     Hostname: snapp-services-test-01.globalnoc.mcnc.org
 
   # SNAPP/SIMP servers
-  'mcnc-snapp-1 mcnc-simp-1 mcnc-snapp mcnc-simp':
+  "mcnc-snapp-1 mcnc-simp-1 mcnc-snapp mcnc-simp":
     Hostname: snapp-collector-01.globalnoc.mcnc.org
-  'mcnc-snapp-2 mcnc-simp-2':
+  "mcnc-snapp-2 mcnc-simp-2":
     Hostname: snapp-collector-02.globalnoc.mcnc.org
   mcnc-snapp-ncren:
     Hostname: snapp.ncren.net
-  'mcnc-snapp-test mcnc-simp-test':
+  "mcnc-snapp-test mcnc-simp-test":
     Hostname: snapp-collector-test-01.globalnoc.mcnc.org
 
   # OneNet hosts
@@ -398,7 +396,7 @@ ssh_host_configs:
   # OSHEAN hosts
 
   # SNAPP/SIMP servers
-  'oshean-snapp oshean-simp':
+  "oshean-snapp oshean-simp":
     Hostname: snapp.oshean.org
 
 use_tmux: true
