add cloud-new to vpn

--- a/inventory/standard/host_vars/jdratlif-dev7.grnoc.iu.edu.yaml
+++ b/inventory/standard/host_vars/jdratlif-dev7.grnoc.iu.edu.yaml
@@ -50,6 +50,8 @@ vpn_hosts:
   - cloud.grnoc.iu.edu
   - cloud.bldc.grnoc.iu.edu
   - cloud.ctc.grnoc.iu.edu
+  - cloud-new.bldc.grnoc.iu.edu
+  - cloud-new.ctc.grnoc.iu.edu
   - footprints.ncren.net
   - oob2.ak23.bldc.grnoc.iu.edu
   - oob2.n13.ctc.grnoc.iu.edu
