--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -135,6 +135,7 @@ all:
                 netsage-simp.grnoc.iu.edu:
                 opendistro-dev-new.grnoc.iu.edu:
                 packrat.grnoc.iu.edu:
+                pwa-dev2.grnoc.iu.edu:
                 rabbitmq.tsds.bldc.grnoc.iu.edu:
                 rpki.ctc.indiana.gigapop.net:
                 services.tsds.bldc.grnoc.iu.edu:
