--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -137,6 +137,7 @@ all:
                 packrat.grnoc.iu.edu:
                 pwa-dev2.grnoc.iu.edu:
                 rabbitmq.tsds.bldc.grnoc.iu.edu:
+                routerproxy.bldc.net.internet2.edu:
                 rpki.ctc.indiana.gigapop.net:
                 services.tsds.bldc.grnoc.iu.edu:
                 services.tsds.ctc.grnoc.iu.edu:
