add carto hosts

--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -50,8 +50,11 @@ all:
                 build.grnoc.iu.edu:
                 carto.areon.net:
                 carto.bldc.grnoc.iu.edu:
+                carto.misen.grnoc.iu.edu:
                 carto.net.cen.ct.gov:
                 carto.noc.onenet.net:
+                carto.oshean.org:
+                carto-01.globalnoc.mcnc.org:
                 carto-test.grnoc.iu.edu:
                 carto-test-01.globalnoc.mcnc.org:
                 cosign.areon.net:
