--- a/inventory/standard/group_vars/grnoc.yaml
+++ b/inventory/standard/group_vars/grnoc.yaml
@@ -1,10 +1,12 @@
 ---
 aliases:
-  puppet: 'sudo /opt/puppetlabs/bin/puppet'
+  puppet: "sudo /opt/puppetlabs/bin/puppet"
   socks5: 'ssh -D 17798 -S /tmp/.ssh-skip-socks5-jdratlif -M -fN skip.grnoc.iu.edu; export SOCKS5_PROXY="localhost:17798"'
-  socks5_kill: 'ssh -S /tmp/.ssh-skip-socks5-jdratlif -O exit skip.grnoc.iu.edu'
+  socks5_kill: "ssh -S /tmp/.ssh-skip-socks5-jdratlif -O exit skip.grnoc.iu.edu"
 
 functions:
+  find_puppet_class:
+    - find -iname "*.eyaml" -exec sh -c "CLASS=$1 "'RES=$(yq ".classes[] | select(. == \"${CLASS}\")" < {} 2>/dev/null); test ! -z $RES && echo {}' \;
   p:
     - >-
       if [[ -z "$1" ]]; then action="run"; else action=$1; shift; fi
@@ -53,9 +55,9 @@ functions:
       perl -M'Data::Dump qw(pp)' -e "${MY_LIBS} pp(\%INC);"
 
 gitconfig:
-  name: 'John Ratliff'
-  email: 'jdratlif@globalnoc.iu.edu'
+  name: "John Ratliff"
+  email: "jdratlif@globalnoc.iu.edu"
   credentials:
-    - name: 'https://github.grnoc.iu.edu'
+    - name: "https://github.grnoc.iu.edu"
       username: jdratlif
-      helper: 'cache --timeout 43200'
+      helper: "cache --timeout 43200"
