--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -44,6 +44,7 @@ all:
                 adeora-dev.grnoc.iu.edu:
                 alertmon.bldc.grnoc.iu.edu:
                 alertmon.ctc.grnoc.iu.edu:
+                awx-frontend.ctc.grnoc.iu.edu:
                 backup.grnoc.iu.edu:
                 backup.ictc.ilight.net:
                 bridge.grnoc.iu.edu:
