--- a/inventory/standard/group_vars/awx.yaml
+++ b/inventory/standard/group_vars/awx.yaml
@@ -1,5 +1,6 @@
 ---
 aliases:
   awx: "sudo docker exec -it awx_task /bin/bash"
+  make_awx_venv: "sudo /usr/local/sbin/make_awx_venv.sh"
 
 use_vscode_git: true
