--- a/group_vars/bastion.yml
+++ b/group_vars/bastion.yml
@@ -5,7 +5,7 @@ functions:
   config_host:
     - name=$1
     - shift
-    - ansible-playbook main.yaml -e "host_override=$name" "$@"
+    - ansible-playbook playbook.yml -e "host_override=$name" "$@"
 
 ssh_host_common_configs:
   ControlMaster: "auto"
