fix dev host check in playbook

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -3,7 +3,7 @@ all:
   children:
     globalnoc:
       children:
-        # groups that cross clouds
+        # non cloud specific groups
         awx:
           children:
             awx_grnoc:
@@ -17,6 +17,12 @@ all:
               hosts:
                 awx.bldc.nwave.noaa.gov:
                 awx.ctc.nwave.noaa.gov:
+
+        dev:
+          hosts:
+            jdratlif-dev7.grnoc.iu.edu:
+            jdratlif-dev7.bldc.grnoc.iu.edu:
+            jdratlif-dev8.grnoc.iu.edu:
 
         bastion:
           children:
