add safe directories to gitconfig

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -60,7 +60,6 @@ all:
             backup.grnoc.iu.edu:
             backup.ictc.ilight.net:
             bgeels-dev-7.grnoc.iu.edu:
-            build.grnoc.iu.edu:
             carto.areon.net:
             carto.bldc.grnoc.iu.edu:
             carto.misen.grnoc.iu.edu:
@@ -174,6 +173,7 @@ all:
             netsage-simp.grnoc.iu.edu:
             packrat.grnoc.iu.edu:
             pwa-dev2.grnoc.iu.edu:
+            puppet.grnoc.iu.edu:
             puppet-stage2.grnoc.iu.edu:
             rabbitmq.tsds.bldc.grnoc.iu.edu:
             routerproxy.bldc.net.internet2.edu:
