add puppet host n-wave

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -286,7 +286,6 @@ all:
             db2.bldc.nwave.noaa.gov:
             db2.boul.nwave.noaa.gov:
             db2.ctc.nwave.noaa.gov:
-            dist.bldc.nwave.noaa.gov:
             carto.bldc.nwave.noaa.gov:
             carto.ctc.nwave.noaa.gov:
             cope.bldc.nwave.noaa.gov:
@@ -315,6 +314,7 @@ all:
             portal-demo.bldc.nwave.noaa.gov:
             portal-demo.ctc.nwave.noaa.gov:
             ps.ctc.nwave.noaa.gov:
+            puppet.nwave.noaa.gov:
             simp-poller.silv.nwave.noaa.gov:
             simp-poller.silv2.nwave.noaa.gov:
             simp-data-silv.ctc.nwave.noaa.gov:
