shorten awx-frontend hostnames

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -56,7 +56,7 @@ all:
             adeora-dev.grnoc.iu.edu:
             alertmon.bldc.grnoc.iu.edu:
             alertmon.ctc.grnoc.iu.edu:
-            awx-frontend.ctc.grnoc.iu.edu:
+            awx-frontend.grnoc.iu.edu:
             backup.grnoc.iu.edu:
             backup.ictc.ilight.net:
             bgeels-dev-7.grnoc.iu.edu:
@@ -274,7 +274,7 @@ all:
           hosts:
             awx.bldc.nwave.noaa.gov:
             awx.ctc.nwave.noaa.gov:
-            awx-frontend.bldc.nwave.noaa.gov:
+            awx-frontend.nwave.noaa.gov:
             backup.boul.nwave.noaa.gov:
             backup.ctc.nwave.noaa.gov:
             compute.cloud.bldc.nwave.noaa.gov:
