fix monitor servers on nwave

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -302,8 +302,8 @@ all:
             mon.bldc.nwave.noaa.gov:
             mon.boul.nwave.noaa.gov:
             mon.ctc.nwave.noaa.gov:
-            mon.silv.nwave.noaa.gov:
-            mon.silv2.nwave.noaa.gov:
+            mon-probe.silv.nwave.noaa.gov:
+            mon-probe.silv2.nwave.noaa.gov:
             netflow-data.bldc.nwave.noaa.gov:
             netflow-data.ctc.nwave.noaa.gov:
             netflow-frontend.bldc.nwave.noaa.gov:
