add puppet eyaml alias

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -41,6 +41,13 @@ all:
                 bastion.ctc.nwave.noaa.gov:
                 bastion.boul.nwave.noaa.gov:
 
+        puppet:
+          children:
+            hosts:
+              puppet.grnoc.iu.edu:
+              puppet-stage2.grnoc.iu.edu:
+              puppet.nwave.noaa.gov:
+
         # kerberos domains (grnoc/i2/nwave)
         grnoc:
           # can be reached from grnoc bastions and use grnoc kerberos
