fix puppet inventory

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -43,10 +43,13 @@ all:
 
         puppet:
           children:
-            hosts:
-              puppet.grnoc.iu.edu:
-              puppet-stage2.grnoc.iu.edu:
-              puppet.nwave.noaa.gov:
+            puppet_grnoc:
+              hosts:
+                puppet.grnoc.iu.edu:
+                puppet-stage2.grnoc.iu.edu:
+            puppet_nwave:
+              hosts:
+                puppet.nwave.noaa.gov:
 
         # kerberos domains (grnoc/i2/nwave)
         grnoc:
