add misc nwave hosts

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -309,6 +309,9 @@ all:
             kerb.bldc.nwave.noaa.gov:
             kerb.ctc.nwave.noaa.gov:
             map-builder.bldc.nwave.noaa.gov:
+            misc.bldc.nwave.noaa.gov:
+            misc.boul.nwave.noaa.gov:
+            misc.ctc.nwave.noaa.gov:
             mon.bldc.nwave.noaa.gov:
             mon.boul.nwave.noaa.gov:
             mon.ctc.nwave.noaa.gov:
