add i2 test host

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -264,6 +264,7 @@ all:
             frontend.tsds.wash2.net.internet2.edu:
             grafana.bldc.net.internet2.edu:
             grafana.wash2.net.internet2.edu:
+            jdratlif-test.net.internet2.edu:
             mongo1.tsds.bldc.net.internet2.edu:
             mongo2.tsds.bldc.net.internet2.edu:
             mongo3.tsds.bldc.net.internet2.edu:
