add sources to bashrc

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -10,6 +10,7 @@ functions:
     - LINE_NUMBER=$1
     - "[[ ! -z $LINE_NUMBER ]] && sed -i -e $1d ~/.ssh/known_hosts"
 
+bash_sources: []
 ssh_authorized_keys: []
 
 ssh_host_common_configs:
