add os test hosts

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -181,6 +181,12 @@ all:
             netsage-portal-suncorridor.grnoc.iu.edu:
             netsage-portal-tacc.grnoc.iu.edu:
             netsage-simp.grnoc.iu.edu:
+            os-comp1.bldc.grnoc.iu.edu:
+            os-comp3.bldc.grnoc.iu.edu:
+            os-comp4.bldc.grnoc.iu.edu:
+            os-comp5.bldc.grnoc.iu.edu:
+            os-store1.bldc.grnoc.iu.edu:
+            os-store2.bldc.grnoc.iu.edu:
             packrat.grnoc.iu.edu:
             pwa-dev2.grnoc.iu.edu:
             puppet.grnoc.iu.edu:
